# deep-coder

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.frontend  README.md  deploy.sh  docker-compose.yml  pyproject.toml
backend/: main.py
backend/agent/: __init__.py  core.py  prompts.py
backend/agent/tools/: __init__.py
backend/api/: main.py
backend/api/routes/: __init__.py  chat.py  sandbox.py  session.py
backend/checkpoint/: __init__.py
backend/config/: settings.py
backend/models/: __init__.py  request.py  response.py
backend/sandbox/: __init__.py  manager.py
docs/: quickstart.md  technical-design.md
frontend/: app.py
frontend/utils/: api_client.py
