[project]
name = "deep-coder"
version = "0.1.0"
description = "AI-powered coding agent with LangGraph and E2B sandbox"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Deep-Coder Team" }]
keywords = ["ai", "coding", "agent", "langchain", "langgraph", "e2b", "zhipuai"]

dependencies = [
    # LangChain 1.0+
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-community>=0.3.0",
    # LangGraph 1.0+
    "langgraph>=1.0.0",
    # ZhipuAI Integration
    "zhipuai>=2.0.0",
    # E2B Sandbox
    "e2b-code-interpreter>=1.0.0",
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "websockets>=12.0",
    "httpx>=0.27.0",
    # Frontend
    "streamlit>=1.30.0",
    # Configuration
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
]
# Future: MongoDB checkpointer (currently has version conflicts)
# mongodb = [
#     "pymongo>=4.6.0",
#     "langgraph-checkpoint-mongodb",
# ]

[project.scripts]
deep-coder = "backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "frontend"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
